--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="icon" href="/favicon.ico"/>
-        <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <meta name="theme-color" content="#000000"/>
-        <meta name="description" content="Web site created using create-react-app"/>
-        <link rel="apple-touch-icon" href="/logo192.png"/>
-        <link rel="manifest" href="/manifest.json"/>
-        <title>React App</title>
-        <script>
-            (function() {
-                var params = new URLSearchParams(window.location.search);
-                var path = params.get('path');
-                if (path) {
-                    window.history.replaceState({}, '', path);
-                }
-            })();
-        </script>
-        <script defer="defer" src="/static/js/main.4394353c.js"></script>
-        <link href="/static/css/main.077b7fb3.css" rel="stylesheet">
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Urbania Climbing Festival</title><script>(function() {
+          var params = new URLSearchParams(window.location.search);
+          var path = params.get('path');
+          if (path) {
+              window.history.replaceState({}, '', path);
+          }
+      })();</script><script defer="defer" src="/static/js/bundle.js"></script><link href="/static/css/styles.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
