--- a/index.html
+++ b/index.html
@@ -1,34 +1,7 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/>
-        <link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/>
-        <title>Urbania Climbing Festival</title>
-        <script>(function() {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Urbania Climbing Festival</title><script>(function() {
           var params = new URLSearchParams(window.location.search);
           var path = params.get('path');
           if (path) {
               window.history.replaceState({}, '', path);
           }
-        })();</script>
-        <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-            })(window,document,'script','dataLayer','GTM-P8QGSGL4');</script>
-            <!-- End Google Tag Manager -->
-        <script defer="defer" src="/static/js/main.js"></script>
-        <link href="/static/css/styles.css" rel="stylesheet">
-    </head>
-    <body>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P8QGSGL4"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-            <!-- End Google Tag Manager (noscript) -->
-        <noscript></noscript>
-        <div id="root"></div>
-    </body>
-</html>
+      })();</script><script defer="defer" src="/static/js/main.js"></script><link href="/static/css/styles.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
