Changed robots to normal, added no index no follow

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/logowide.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Urbania Climbing Festival"/><link rel="apple-touch-icon" href="/logowide.png"/><link rel="manifest" href="/manifest.json"/><title>Urbania Climbing Festival</title><script>(function() {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/logowide.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="robots" content="noindex, nofollow"><meta name="description" content="Urbania Climbing Festival"/><link rel="apple-touch-icon" href="/logowide.png"/><link rel="manifest" href="/manifest.json"/><title>Urbania Climbing Festival</title><script>(function() {
           var params = new URLSearchParams(window.location.search);
           var path = params.get('path');
           if (path) {
