--- a/index.html
+++ b/index.html
@@ -4,12 +4,4 @@
           if (path) {
               window.history.replaceState({}, '', path);
           }
-      })();</script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-P8QGSGL4');</script><script>(function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "lpgxcaxfz9");</script><script defer="defer" src="/static/js/main.js"></script><link href="/static/css/styles.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P8QGSGL4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript></body></html>
+      })();</script><script defer="defer" src="/static/js/main.js"></script><link href="/static/css/styles.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
