New webpack and serviceworker

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
           if (path) {
               window.history.replaceState({}, '', path);
           }
-      })();</script><script defer="defer" src="/static/js/main.js"></script><link href="/static/css/styles.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
+      })();</script><script defer="defer" src="/static/js/main.3f6cc3e7f23b5f5d7295.js"></script><link href="/static/css/main.490f137dff709a83cafd.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
